# nam-rs

./: .gitignore  AUDIT.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  wasm.yml
docs/: cpp-test-inventory.md  feature-gap-analysis.md  optimization-plan.md  performance-analysis.md  sample-rate-conversion-plan.md  test-coverage-audit.md
nam-cli/: Cargo.toml
nam-cli/src/: main.rs
nam-core/: Cargo.toml  build.rs
nam-core/benches/: inference.rs
nam-core/csrc/: fast_kernels.c
nam-core/src/: activations.rs  convnet.rs  dsp.rs  error.rs  fast_kernels.rs  get_dsp.rs  lib.rs  linear.rs  lstm.rs  util.rs  version.rs  wavenet.rs
nam-plugin/: Cargo.toml
nam-plugin/src/: lib.rs
nam-trainer/: Cargo.toml  IDEAS_FOR_FURTHER_IMPROVEMENT.md
nam-trainer/python/: detect_environment.py  nam_worker.py
nam-trainer/src/: app.rs  main.rs  settings.rs
nam-trainer/src/ui/: advanced_options.rs  main_panel.rs  metadata_panel.rs  mod.rs  progress.rs
nam-trainer/src/worker/: mod.rs  protocol.rs
nam-wasm/: Cargo.toml
nam-wasm/src/: lib.rs
nam-web/: build.sh  index.html  main.js
nam-web/lib/: profile-store.js
nam-web/worklet/: nam-processor.js
xtask/: Cargo.toml
