[package]
name = "nam-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust DSP inference engine for Neural Amp Modeler"

[features]
default = []
float_io = []  # Use f32 instead of f64 for process() I/O (matches C++ DSP_SAMPLE_FLOAT)
faer = ["dep:faer"]  # Use faer GEMM instead of matrixmultiply
fast-kernels = []  # C inner loops compiled with -ffast-math

[build-dependencies]
cc = { version = "1", optional = false }

[dependencies]
ndarray = "0.16"
matrixmultiply = "0.3"
faer = { version = "0.20", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
hound = "3.5"

[[bench]]
name = "inference"
harness = false
