[package]
name = "nam-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Neural Amp Modeler"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nam-core = { path = "../nam-core", features = ["float_io"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
